# diario

./: .env.example  .gitignore  LICENSE  README.md  TODO  agents.md  download_export.py  homework.json  index.html  justfile  parse_homework.py  requirements.txt
crates/compitutto/: Cargo.toml
crates/compitutto/src/: data.rs  db.rs  html.rs  main.rs  parser.rs  server.rs  types.rs
crates/compitutto/src/html/: settings.rs
crates/raschietto/: Cargo.toml
crates/raschietto/src/: scraper.rs
